--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "apollo-boost": "^0.3.1",
     "apollo-fetch": "^0.7.0",
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.3.3",
     "gatsby-image": "^2.0.35",
+    "gatsby-plugin-react-helmet": "^3.0.11",
     "gatsby-plugin-sharp": "^2.0.32",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-source-filesystem": "^2.0.28",
     "gatsby-source-graphql": "^2.0.15",
     "gatsby-transformer-sharp": "^2.1.17",
@@ -25,7 +28,9 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.3",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^5.6.0",
